--- a/style.css
+++ b/style.css
@@ -1,38 +1,61 @@
 @font-face {
-  font-family: "Helvetica-Normal";
-  src: url("fonts/Helvetica-Normal.eot");
-  src: url("fonts/Helvetica-Normal.eot?#iefix") format("embedded-opentype"),
-    url("fonts/Helvetica-Normal.woff2") format("woff2"),
-    url("fonts/Helvetica-Normal.woff") format("woff"),
-    url("fonts/Helvetica-Normal.ttf") format("truetype"),
-    url("fonts/Helvetica-Normal.svg#Helvetica-Normal") format("svg");
+  font-family: "Helvetica";
+  src: url("fonts/Helvetica-Regular.eot");
+  src: url("fonts/Helvetica-Regular.eot?#iefix") format("embedded-opentype"),
+    url("fonts/Helvetica-Regular.woff2") format("woff2"),
+    url("fonts/Helvetica-Regular.woff") format("woff"),
+    url("fonts/Helvetica-Regular.ttf") format("truetype"),
+    url("fonts/Helvetica-Regular.svg#Helvetica-Regular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Helvetica Neue";
+  src: url("fonts/HelveticaNeue.eot");
+  src: url("fonts/HelveticaNeue.eot?#iefix") format("embedded-opentype"),
+    url("fonts/HelveticaNeue.woff2") format("woff2"),
+    url("fonts/HelveticaNeue.woff") format("woff"),
+    url("fonts/HelveticaNeue.ttf") format("truetype"),
+    url("fonts/HelveticaNeue.svg#HelveticaNeue") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "HelveticaNeueCyr";
-  src: url("fonts/HelveticaNeueCyr-Black.eot");
-  src: url("fonts/HelveticaNeueCyr-Black.eot?#iefix")
-      format("embedded-opentype"),
-    url("fonts/HelveticaNeueCyr-Black.woff2") format("woff2"),
-    url("fonts/HelveticaNeueCyr-Black.woff") format("woff"),
-    url("fonts/HelveticaNeueCyr-Black.ttf") format("truetype"),
-    url("fonts/HelveticaNeueCyr-Black.svg#HelveticaNeueCyr-Black") format("svg");
-  font-weight: 900;
+  font-family: "Helvetica Neue";
+  src: url("fonts/HelveticaNeue-Bold.eot");
+  src: url("fonts/HelveticaNeue-Bold.eot?#iefix") format("embedded-opentype"),
+    url("fonts/HelveticaNeue-Bold.woff2") format("woff2"),
+    url("fonts/HelveticaNeue-Bold.woff") format("woff"),
+    url("fonts/HelveticaNeue-Bold.ttf") format("truetype"),
+    url("fonts/HelveticaNeue-Bold.svg#HelveticaNeue-Bold") format("svg");
+  font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "HelveticaNeueCyr";
-  src: url("fonts/HelveticaNeueCyr-Light.eot");
-  src: url("fonts/HelveticaNeueCyr-Light.eot?#iefix")
-      format("embedded-opentype"),
-    url("fonts/HelveticaNeueCyr-Light.woff2") format("woff2"),
-    url("fonts/HelveticaNeueCyr-Light.woff") format("woff"),
-    url("fonts/HelveticaNeueCyr-Light.ttf") format("truetype"),
-    url("fonts/HelveticaNeueCyr-Light.svg#HelveticaNeueCyr-Light") format("svg");
+  font-family: "Helvetica Neue";
+  src: url("fonts/HelveticaNeue-Light.eot");
+  src: url("fonts/HelveticaNeue-Light.eot?#iefix") format("embedded-opentype"),
+    url("fonts/HelveticaNeue-Light.woff2") format("woff2"),
+    url("fonts/HelveticaNeue-Light.woff") format("woff"),
+    url("fonts/HelveticaNeue-Light.ttf") format("truetype"),
+    url("fonts/HelveticaNeue-Light.svg#HelveticaNeue-Light") format("svg");
   font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Georgia";
+  src: url("fonts/Georgia-Bold.eot");
+  src: url("fonts/Georgia-Bold.eot?#iefix") format("embedded-opentype"),
+    url("fonts/Georgia-Bold.woff2") format("woff2"),
+    url("fonts/Georgia-Bold.woff") format("woff"),
+    url("fonts/Georgia-Bold.ttf") format("truetype"),
+    url("fonts/Georgia-Bold.svg#Georgia-Bold") format("svg");
+  font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
@@ -40,7 +63,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Helvetica-Normal";
+  font-family: "Helvetica Neue";
   color: #424242;
 }
 div,
@@ -92,6 +115,10 @@ a {
   text-decoration: none;
   transition: all 0.4s ease;
 }
+.numbers:hover,
+.mails:hover {
+  color: #de2b24;
+}
 .facebk {
   background: #1287bf;
   color: #fff;
@@ -109,21 +136,35 @@ a {
   padding-top: 30px;
   padding-bottom: 30px;
 }
-.hlogo {
-  background: url(logo.png) no-repeat left center;
-  padding-left: 83px;
-  font-family: "HelveticaNeueCyr";
-  display: inline-block;
+.logo_text {
+  margin-left: 8px;
 }
-.hlogo_ {
-  display: inline-block;
+.hlogo {
+  width: 252px;
+  font-family: "Helvetica Neue";
+  display: flex;
+  align-items: center;
+}
+.dot {
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 3px;
+}
+.logo {
+  font-weight: bold;
+  font-size: 35px;
+}
+.block1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .hnovigate {
   display: inline-block;
   float: right;
   font-weight: bold;
 }
-.btm {
+.btn {
   background: #de2b24;
   color: #fff;
   padding: 15px 22px;
@@ -134,12 +175,9 @@ a {
   transition: box-shadow 0.5s ease;
 }
 .right:hover {
-  box-shadow: inset 170px 0 #9a1d19;
+  box-shadow: inset 180px 0 #9a1d19;
 }
-.logo {
-  font-weight: bold;
-  font-size: 35px;
-}
+
 ul,
 li {
   display: inline-block;
@@ -164,7 +202,7 @@ li {
   flex-direction: column;
   align-items: center;
   padding-top: 150px;
-  padding-bottom: 230px;
+  padding-bottom: 250px;
 }
 h1 {
   font-weight: bold;
@@ -181,11 +219,12 @@ h1 {
 .yellow {
   background: #f8cd53;
   color: #fff;
+  font-family: "Helvetica Neue";
   font-weight: bold;
   text-transform: uppercase;
   padding: 25px 40px;
   border-radius: 7px;
-  font-size: 22px;
+  font-size: 24px;
   width: 335px;
   cursor: pointer;
   border: 0;
@@ -194,7 +233,7 @@ h1 {
   transition: box-shadow 0.5s ease, color 0.5s ease;
 }
 .down:hover {
-  box-shadow: inset 0 77px #cca844;
+  box-shadow: inset 0 85px #cca844;
 }
 .descript {
   padding-top: 109px;
@@ -243,6 +282,12 @@ h1 {
 h3 {
   margin: 0;
 }
+h2 {
+  font-size: 36px;
+}
+.bar h3 {
+  margin-bottom: 17px;
+}
 .book {
   width: 247px;
 }
@@ -257,7 +302,7 @@ h3 {
 }
 .title3,
 .title4 {
-  width: 445px;
+  width: 455px;
   margin: 0 auto;
   text-align: center;
 }
@@ -283,7 +328,7 @@ h3 {
   flex-direction: row-reverse;
 }
 .text {
-  padding: 70px 74px 81px 89px;
+  padding: 64px 74px 81px 89px;
 }
 .imgst1 {
   width: 341px;
@@ -305,18 +350,31 @@ h3 {
   text-align: center;
   height: 100px;
   width: 100px;
-  padding-top: 15px;
   margin-left: 290px;
   margin-top: 63px;
+}
+.text h3 {
+  margin-bottom: 15px;
 }
 .even {
   margin-right: 290px;
 }
 .num {
-  font-family: serif;
-  font-size: 40px;
+  display: block;
+  font-family: "Georgia";
+  font-size: 58px;
   margin: 0;
   font-weight: bold;
+}
+.num_text {
+  position: absolute;
+  font-size: 20px;
+  padding: 0;
+  top: 53px;
+  right: 27px;
+}
+.num_3_4 {
+  top: 63px;
 }
 .ourwork {
   background: #de2b24;
@@ -352,7 +410,7 @@ i {
   position: relative;
   cursor: pointer;
 }
-.one:hover::after {
+.miniblock:hover::after {
   content: "Lorem Ipsum is simply dummy text of the printing and typesetting industry.";
   position: absolute;
   left: 0;
@@ -363,30 +421,22 @@ i {
   padding: 10px;
   text-align: center;
 }
-.two:hover::after {
-  content: "Lorem Ipsum is simply dummy text of the printing and typesetting industry.";
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(222, 43, 36, 0.7);
-  font-size: 13px;
-  padding: 10px;
-  text-align: center;
-}
+
 .miniblock p,
 h3 {
   font-weight: bold;
-  letter-spacing: 0.5px;
 }
 .miniblock h3 {
-  font-size: 20px;
+  font-size: 22px;
 }
 .miniblock p {
   font-size: 13px;
 }
 .photos_of_project {
   width: 100%;
+}
+img {
+  object-fit: cover;
 }
 .previews {
   height: 255px;
@@ -426,11 +476,13 @@ h3 {
 }
 .block5 h2 {
   width: 100%;
-  letter-spacing: 0.7px;
+  font-size: 36px;
 }
 .block5 p {
-  letter-spacing: 0.7px;
   margin-bottom: 20px;
+}
+.title5_p {
+  font-size: 20px;
 }
 .pop {
   color: #fff;
@@ -496,7 +548,7 @@ h3 {
   border: 1px solid #d8d8d8;
   font-size: 15px;
   color: #696969;
-  font-family: "Helvetica-Normal";
+  font-family: "Helvetica";
   padding-left: 23px;
   padding-top: 21px;
   padding-bottom: 21px;
@@ -508,12 +560,12 @@ h3 {
   border: 1px solid #1287bf;
   outline: none;
 }
-._btm5block {
+._btn5block {
   width: 160px;
   height: 46px;
-  font-size: 12px;
+  font-size: 15px;
   background: #de2b24;
-  padding: 17px 30px 19px 30px;
+  padding: 15px 30px 19px 30px;
   border-radius: 3px;
   margin-top: 28px;
 }
@@ -526,9 +578,10 @@ h3 {
   background: #de2b24;
   height: 44px;
   width: 44px;
-  line-height: 42px;
+  line-height: 38px;
   border-radius: 50px;
-  font-family: "HelveticaNeueCyr";
+  font-family: "Helvetica Neue";
+  font-weight: 100;
   font-size: 32px;
   border: 3px solid #fff;
 
@@ -631,7 +684,14 @@ footer {
 
 @media (max-width: 1200px) {
   body {
-    background-color: aqua;
+    background-color: #000;
+  }
+  .container {
+    width: 85%;
+    margin: 0 auto;
+  }
+  .logo_text {
+    display: none;
   }
 }
 @media (max-width: 992px) {
