--- a/style.css
+++ b/style.css
@@ -65,7 +65,20 @@ body {
   padding: 0;
   font-family: "Helvetica Neue";
   color: #424242;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.8;
+
+  height: 100%;
+  background-image: url(template.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 999;
 }
+
 div,
 p,
 input,
@@ -82,30 +95,31 @@ a {
   color: #424242;
 }
 .container {
-  width: 1025px;
+  width: 1110px;
   margin: 0 auto;
 }
 .face {
   background: #f0f2f4;
   border-bottom: 1px solid #e6e6e6;
   height: 42px;
+  padding-top: 12px;
+  max-height: 35px;
 }
 .hcontact {
   text-align: right;
-  padding-top: 8px;
 }
 .fa-mobile-alt,
 .fa-envelope {
   font-size: 18px;
   margin-right: 10px;
 }
+
 .number,
 .mail {
   display: inline-block;
 }
 .number {
-  padding-left: 27px;
-  margin-right: 40px;
+  margin-right: 12px;
 }
 .mail {
   padding-left: 30px;
@@ -133,27 +147,27 @@ a {
   margin-left: 13px;
 }
 .novigate {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 42px;
+  padding-bottom: 40px;
 }
-.logo_text {
-  margin-left: 8px;
-}
+
 .hlogo {
   width: 252px;
   font-family: "Helvetica Neue";
   display: flex;
   align-items: center;
 }
-.dot {
-  margin-left: 15px;
-  margin-right: 15px;
-  margin-bottom: 3px;
+.nav_link:not(:last-child)::after {
+  content: " ";
+  background-image: url(dot.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-left: 22px;
+  margin-right: 16px;
+  display: inline-block;
+  margin-bottom: 10px;
 }
-.logo {
-  font-weight: bold;
-  font-size: 35px;
-}
+
 .block1 {
   display: flex;
   justify-content: space-between;
@@ -167,7 +181,7 @@ a {
 .btn {
   background: #de2b24;
   color: #fff;
-  padding: 15px 22px;
+  padding: 9px 25px;
   width: 170px;
   text-align: center;
   border-radius: 7px;
@@ -201,20 +215,20 @@ li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 150px;
+  padding-top: 178px;
   padding-bottom: 250px;
 }
 h1 {
   font-weight: bold;
   color: #fff;
   margin: 0px;
-  font-size: 44px;
+  font-size: 54px;
 }
 .rule {
   color: #fff;
   margin: 0px;
   letter-spacing: 1px;
-  font-size: 22px;
+  font-size: 29px;
 }
 .yellow {
   background: #f8cd53;
@@ -222,14 +236,14 @@ h1 {
   font-family: "Helvetica Neue";
   font-weight: bold;
   text-transform: uppercase;
-  padding: 25px 40px;
+  padding: 20px 40px;
   border-radius: 7px;
   font-size: 24px;
-  width: 335px;
+  width: 355px;
   cursor: pointer;
   border: 0;
   margin-left: 0px;
-  margin-top: 38px;
+  margin-top: 34px;
   transition: box-shadow 0.5s ease, color 0.5s ease;
 }
 .down:hover {
@@ -246,16 +260,17 @@ h1 {
 }
 .aboutus h2 {
   margin: 0;
+  font-size: 40px;
 }
 .aboutus p {
   margin: 0;
 }
 .line {
   border-bottom: 5px solid #424242;
-  padding-bottom: 20px;
-  width: 47px;
+  padding-bottom: 14px;
+  width: 50px;
   margin: 0 auto;
-  margin-bottom: 45px;
+  margin-bottom: 58px;
 }
 .facebook,
 .book,
@@ -283,7 +298,7 @@ h3 {
   margin: 0;
 }
 h2 {
-  font-size: 36px;
+  font-size: 38px;
 }
 .bar h3 {
   margin-bottom: 17px;
@@ -298,48 +313,55 @@ h2 {
   align-items: center;
   height: 215px;
   box-sizing: border-box;
-  min-width: 0;
+  max-width: 975px;
+  margin: 0 auto;
 }
 .title3,
 .title4 {
-  width: 455px;
+  width: 480px;
   margin: 0 auto;
   text-align: center;
 }
 .approch3 {
-  padding-top: 100px;
-  padding-bottom: 135px;
+  padding-top: 90px;
+  padding-bottom: 105px;
   background: #f3f3f3;
+}
+.line_approch3 {
+  margin-bottom: 49px;
 }
 .step1,
 .step2,
 .step3,
 .step4 {
   background: #fff;
-  height: 237px;
+  height: 255px;
   box-shadow: 0 0 10px #d5d5d5;
   display: flex;
   box-sizing: border-box;
   flex-direction: row;
-  margin-bottom: 40px;
+  margin-bottom: 43px;
 }
 .step2,
 .step4 {
   flex-direction: row-reverse;
 }
 .text {
-  padding: 64px 74px 81px 89px;
+  padding: 72px 74px 81px 89px;
 }
 .imgst1 {
-  width: 341px;
+  min-width: 370px;
 }
 .steps {
-  font-size: 13px;
+  font-size: 15px;
   line-height: 19px;
 }
 .approchstep {
   margin-bottom: 22 px;
   font-size: 18px;
+}
+.text_row_reverse {
+  text-align: right;
 }
 .redblock {
   background: #dd2b24;
@@ -348,16 +370,16 @@ h2 {
   color: #fff;
   position: absolute;
   text-align: center;
-  height: 100px;
-  width: 100px;
-  margin-left: 290px;
-  margin-top: 63px;
+  height: 112px;
+  width: 115px;
+  margin-left: 310px;
+  margin-top: 68px;
 }
 .text h3 {
   margin-bottom: 15px;
 }
 .even {
-  margin-right: 290px;
+  margin-right: 310px;
 }
 .num {
   display: block;
@@ -368,10 +390,10 @@ h2 {
 }
 .num_text {
   position: absolute;
-  font-size: 20px;
+  font-size: 21px;
   padding: 0;
-  top: 53px;
-  right: 27px;
+  top: 59px;
+  right: 34px;
 }
 .num_3_4 {
   top: 63px;
@@ -379,8 +401,8 @@ h2 {
 .ourwork {
   background: #de2b24;
   color: #fff;
-  padding-top: 121px;
-  padding-bottom: 129px;
+  padding-top: 114px;
+  padding-bottom: 138px;
 }
 .fa-paper-plane {
   color: #fdbab7;
@@ -388,6 +410,8 @@ h2 {
 }
 .forblock4 {
   border-bottom: 5px solid #fff;
+  padding-bottom: 12px;
+  margin-bottom: 52px;
 }
 .title4 {
   margin-bottom: 48px;
@@ -401,11 +425,11 @@ i {
   padding-bottom: 28px;
 }
 .miniblock {
-  height: 255px;
+  height: 274px;
   width: 25%;
   text-align: center;
   background: #f35e59;
-  padding-top: 71px;
+  padding-top: 80px;
   padding-bottom: 79px;
   position: relative;
   cursor: pointer;
@@ -427,13 +451,14 @@ h3 {
   font-weight: bold;
 }
 .miniblock h3 {
-  font-size: 22px;
+  font-size: 26px;
 }
 .miniblock p {
-  font-size: 13px;
+  font-size: 17px;
 }
 .photos_of_project {
   width: 100%;
+  height: 274px;
 }
 img {
   object-fit: cover;
@@ -467,8 +492,11 @@ img {
 .datas {
   background: #1287bf;
   color: #fff;
-  padding-top: 105px;
-  padding-bottom: 80px;
+  padding-top: 100px;
+  padding-bottom: 160px;
+}
+.open_form {
+  margin-bottom: 16px;
 }
 .block5 {
   display: block;
@@ -479,10 +507,10 @@ img {
   font-size: 36px;
 }
 .block5 p {
-  margin-bottom: 20px;
+  margin-bottom: 16px;
 }
 .title5_p {
-  font-size: 20px;
+  font-size: 21px;
 }
 .pop {
   color: #fff;
@@ -516,7 +544,7 @@ img {
 }
 .statistic {
   color: #828282;
-  font-size: 13.5px;
+  font-size: 15px;
   width: 570px;
   letter-spacing: 0px;
   padding-bottom: 36px;
@@ -588,14 +616,14 @@ img {
   transform: rotate(360deg);
 }
 footer {
-  padding-top: 94px;
+  padding-top: 90px;
   background: #2a2a2a;
   text-align: center;
 }
 .end {
   color: #fff;
-  font-size: 28px;
-  padding-bottom: 30px;
+  font-size: 31px;
+  padding-bottom: 25px;
 }
 .social {
   border: 3px solid #555555;
@@ -604,8 +632,8 @@ footer {
   font-size: 23px;
   padding: 0;
   box-sizing: border-box;
-  width: 46px;
-  height: 46px;
+  width: 49px;
+  height: 49px;
   text-align: center;
   padding-top: 9px;
   transition: all 0.4s ease;
@@ -618,33 +646,33 @@ footer {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 258px;
+  width: 272px;
   margin: 0 auto;
 }
 .pEnd {
-  padding-top: 38px;
+  padding-top: 40px;
   padding-bottom: 35px;
   color: #c2c2c2;
 }
 .for_email {
   display: flex;
   flex-direction: column;
-  padding-bottom: 85px;
+  padding-bottom: 93px;
   align-items: center;
 }
 .address {
   background: #515151;
   width: 683px;
-  height: 53px;
+  height: 56px;
   border: 0;
   padding-left: 22px;
-  margin-bottom: 28px;
+  margin-bottom: 31px;
   color: #c2c2c2;
   font-size: 15px;
 }
 .btnEnd {
   width: 150px;
-  height: 50px;
+  height: 55px;
   box-sizing: border-box;
   border: 3px solid #515151;
   border-radius: 3px;
@@ -660,10 +688,10 @@ footer {
 }
 .pEnd_after_container {
   background: #515151;
-  padding-top: 28px;
+  padding-top: 26px;
   padding-bottom: 28px;
   text-align: center;
-  font-size: 15px;
+  font-size: 16px;
   color: #c2c2c2;
 }
 
