--- a/style.css
+++ b/style.css
@@ -65,18 +65,6 @@ body {
   padding: 0;
   font-family: "Helvetica Neue";
   color: #424242;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  opacity: 0.8;
-
-  height: 100%;
-  background-image: url(template.jpeg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  z-index: 999;
 }
 
 div,
@@ -157,15 +145,10 @@ a {
   display: flex;
   align-items: center;
 }
-.nav_link:not(:last-child)::after {
-  content: " ";
-  background-image: url(dot.png);
-  background-repeat: no-repeat;
-  background-position: center;
+.dot {
   margin-left: 22px;
   margin-right: 16px;
-  display: inline-block;
-  margin-bottom: 10px;
+  margin-bottom: 3px;
 }
 
 .block1 {
@@ -479,6 +462,7 @@ img {
   border: 0;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   overflow: hidden;
 }
 .secondrow {
@@ -709,7 +693,6 @@ footer {
 
 @media (max-width: 1200px) {
   body {
-    background-color: #000;
   }
   .container {
     width: 85%;
@@ -736,8 +719,12 @@ footer {
   }
 }
 @media (max-width: 992px) {
-  body {
-    background-color: #f35e59;
+  .project_bar,
+  .secondrow {
+    flex-direction: column;
+  }
+  .projects_wrap {
+    display: flex;
   }
 }
 @media (max-width: 768px) {
